--- a/TODO.txt
+++ b/TODO.txt
@@ -1,14 +1,14 @@
 TODO for first beta:
 * Track-down order of destruction bug.
 * Increase         code-coverage and cleanup+document code
-  + provenance_log     (97%)            OK
-  + anycast            (96%)            OK
-  + opportunistic_hash (89%)            OK
-  + repository         (77%)            OK
-  + carvpath           (72%)            TODO
-  + longpathmap        (70%)            OK
-  + pymattockfs        (66%)            TODO
-  + refcount_stack     (61%)            TODO
+  + provenance_log     (97%)            OK          pep8
+  + anycast            (96%)            OK          -
+  + opportunistic_hash (89%)            OK          pep8
+  + repository         (77%)            OK          -
+  + carvpath           (72%)            TODO        -
+  + longpathmap        (70%)            OK          pep8
+  + pymattockfs        (66%)            TODO        -
+  + refcount_stack     (61%)            TODO        -
 
 Todo for second beta:
 * Unified logging facility.
