--- a/TODO.txt
+++ b/TODO.txt
@@ -1,14 +1,15 @@
 TODO for first beta:
 * Track-down order of destruction bug.
 * Increase         code-coverage and cleanup+document code
-  + provenance_log     (97%)            OK          pep8
-  + anycast            (96%)            OK          pep8
-  + opportunistic_hash (89%)            OK          pep8
-  + repository         (77%)            OK          pep8
-  + carvpath           (72%)            TODO        -
-  + longpathmap        (70%)            OK          pep8
-  + pymattockfs        (66%)            TODO        -
-  + refcount_stack     (61%)            TODO        -
+    FILE               COVERAGE SUFFICIENT  CLEANUP COMMENTS LINT
+  + anycast            (96%)       YES       OK       OK     pep8
+  + opportunistic_hash (89%)       YES       OK       OK     pep8
+  + provenance_log     (97%)       -         OK       OK     pep8
+  + repository         (77%)       -         OK       OK     pep8
+  + longpathmap        (70%)       -         OK       OK     pep8
+  + carvpath           (72%)       -         -        -      -
+  + pymattockfs        (66%)       -         -        -      -
+  + refcount_stack     (61%)       -         -        -      -
 
 Todo for second beta:
 * Unified logging facility.
