--- a/TODO.txt
+++ b/TODO.txt
@@ -6,9 +6,10 @@ TODO for first beta:
   + provenance_log     (97%)       -         OK       OK     pep8
   + repository         (77%)       -         OK       OK     pep8
   + longpathmap        (70%)       -         OK       OK     pep8
-  + carvpath           (72%)       -         -        -      -
+  + carvpath           (72%)       -         -        -      pep8
   + pymattockfs        (66%)       -         -        -      pep8
   + refcount_stack     (61%)       -         -        -      pep8
+  + api                (?)         -         -        -      -
 
 Todo for second beta:
 * Unified logging facility.
