--- a/TODO.txt
+++ b/TODO.txt
@@ -9,7 +9,8 @@ TODO for first beta:
   + carvpath           (72%)       -         -        -      pep8
   + pymattockfs        (66%)       -         -        -      pep8
   + refcount_stack     (61%)       -         -        -      pep8
-  + api                (?)         -         -        -      -
+  + api                (?)         -         -        -      pep8
+  + test_mattockfs     (?)         -         NO       NO     pep8
 
 Todo for second beta:
 * Unified logging facility.
