--- a/TODO.txt
+++ b/TODO.txt
@@ -8,12 +8,13 @@ TODO for first beta:
   + longpathmap        (70%)       -         OK       OK     pep8
   + carvpath           (72%)       -         -        -      pep8
   + pymattockfs        (66%)       -         -        -      pep8
-  + refcount_stack     (61%)       -         -        -      pep8
+  + refcount_stack     (61%)       -         OK       OK     pep8
   + api                (?)         -         -        -      pep8
   + test_mattockfs     (?)         -         NO       NO     pep8
 
 Todo for second beta:
 * Unified logging facility.
+* Record process executable and user in provenance log.
 * Refactor sorting to picking.
 * Restore state from journal.
 * Look into packaging issues (pip?/apt?)
