--- a/TODO.txt
+++ b/TODO.txt
@@ -7,9 +7,9 @@ TODO for first beta:
   + repository         (77%)       -         OK       OK     pep8
   + longpathmap        (70%)       -         OK       OK     pep8
   + carvpath           (72%)       -         -        -      pep8
-  + pymattockfs        (66%)       -         -        -      pep8
+  + pymattockfs        (66%)       -         OK       OK     pep8
   + refcount_stack     (61%)       -         OK       OK     pep8
-  + api                (?)         -         -        -      pep8
+  + api                (?)         -         OK       OK     pep8
   + test_mattockfs     (?)         -         NO       NO     pep8
 
 Todo for second beta:
