--- a/TODO.txt
+++ b/TODO.txt
@@ -4,13 +4,13 @@ TODO for first beta:
   + anycast            (96%)       YES       OK       OK     pep8
   + opportunistic_hash (89%)       YES       OK       OK     pep8
   + provenance_log     (97%)       -         OK       OK     pep8
-  + repository         (77%)       -         OK       OK     pep8
+  + repository         (76%)       -         OK       OK     pep8
   + longpathmap        (70%)       -         OK       OK     pep8
-  + carvpath           (72%)       -         -        -      pep8
-  + pymattockfs        (66%)       -         OK       OK     pep8
-  + refcount_stack     (61%)       -         OK       OK     pep8
-  + api                (?)         -         OK       OK     pep8
-  + test_mattockfs     (?)         -         NO       NO     pep8
+  + carvpath           (70%)       -         OK       OK     pep8
+  + pymattockfs        (70%)       -         OK       OK     pep8
+  + refcount_stack     (62%)       -         -        OK     pep8
+  + api                (78%)       -         OK       OK     pep8
+  + test_mattockfs     (87%)       -         NO       NO     pep8
 
 Todo for second beta:
 * Unified logging facility.
