first beta seems ready now, finaly

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,14 +1,10 @@
-TODO for first beta:
-* Look into packaging issued (pip?/apt?/docker?)
+==== There will be a pauze first now that the first beta is out.
+==== I will try to respond propmptly to any bug reports, but new features
+==== tests and code-coverage concerns will be of later concern.
+==== I'll be working primarily on my paper for a few months.
 
-Possibly todo before we go into paper writing mode for a while :
+Todo for after paper is on track:
 * Example code with libtsk (semi mmls module)
-
-
-==== There will be a long pause in development after above is done,
-==== I'll be working on my paper for a few months.
-
-Todo after first beta:
 * Unified logging facility.
 * Refactor sorting to picking.
 * Restore state from journal.
