--- a/TODO.txt
+++ b/TODO.txt
@@ -1,23 +1,15 @@
-The following are items I still hope to complete myself over the comming weeks before the DFRWS-EU 2017:
-1)  RJM : Build MattockFS deb package for Ubuntu LTS 16.4. (5 SP)
-    Currently the installation of MattockFS uses a combination of a python setup script and a bash script
-    that is meant to run on Ubuntu and install dependencies. Turning this setup into a regular deb file
-    should make installation more standard.
-2)  RJM : Complete my material for DFRWS-EU 2017 workshop on MattockFS.
-3)  RJM : Update website. Website was made largely pre-implemetation and needs some major updates.
+IF YOU WISH TO CONTRIBUTE BY PICKING UP ANY OF THE ITEMS BELOW,
+PLEASE ADD YOUR INITIALS TO THE ITEM AND SEND ME A PULL REQUEST.
 
-After the DFRWS-EU, I'll focus my efforts on these esential features. Extra hands are
-very much welcome. 
-
-    IF YOU WISH TO CONTRIBUTE BY PICKING UP ANY OF THE ITEMS BELOW,
-    PLEASE ADD YOUR INITIALS TO THE ITEM AND SEND ME A PULL REQUEST.
-
-4)  Testing (+ debugging) restore state from journal. This bastard has been with
+1)  RJM : Update website. Website was made largely pre-implemetation and needs some major updates.
+2)  Find + fix bug with mime-type mess up between submitting child job and 
+    receiving job in next module.
+3)  Testing (+ debugging) restore state from journal. This bastard has been with
     me for a few months now and "I REALLY COULD USE A SECOND PAIR OF EYES ON THIS ONE".
     After a restart, the anycast state should get restored from the journal. Currently
     he restored state is somehow messed up, so I've disabled this crucial feature for
     now. I was really hoping to fix this one before the DFRWS.
-5)  Implement temporary-quarantine facility: In OCFA, the Anycast im-
+4)  Implement temporary-quarantine facility: In OCFA, the Anycast im-
     plemented a quarantine facility for data that would crash a module.
     This facility, that OCFA implemented in the form of the never priority
     allowed the investigation to keep running while maintenance program-
@@ -25,10 +17,10 @@ very much welcome.
     implementing a similar data quarantine functionality in MattockFS.
     It is a remore posibility that this feature might be a prerequitite to
     truly fixing the issues with #4.
-6)  Implement and evaluate secondary opportunistic hashing : Secondary
+5)  Implement and evaluate secondary opportunistic hashing : Secondary
     incore based opportunistic hashing could potentially greatly improve
     the interaction between carving and opportunistic hashing.
-7)  Write ports of the base API to C++ Next to Python, C++ should be
+6)  Write ports of the base API to C++ Next to Python, C++ should be
     considered an important language for writing modules in. The current
     Python wrapper API for access to the file-system based archive and
     messaging API should also be ported to C++.
@@ -37,13 +29,13 @@ After everything up to #7 is complete, chances are the Python reference implemen
 will have gone as fas as we can get with Python and the next logical step would be
 a port to C++, followed by a number of nfeatures best implemented after such a port:
 
-8)   Port MattockFS to C++: While Python is a good programming lan-
+7)   Port MattockFS to C++: While Python is a good programming lan-
      guage for prototyping, our evaluation has shown that the implementa-
      tion is relatively slow with respect to import and possibly messaging.
      This slowness could potentially partially nullify part of the performance
      benefits from the page-cache and opportunistic hashing. Rewriting it
      in C++ is likely to lead to a much faster implementation.
-9)   Move to BLAKE2bp: The current implementation uses a Python module 
+8)   Move to BLAKE2bp: The current implementation uses a Python module 
      without support for the parallel multi-core BLAKE2bp implemen-
      tation. With just one file-system on a node for a given archive, this
      would mean at most one core could be working on opportunistic hashing 
@@ -51,7 +43,7 @@ a port to C++, followed by a number of nfeatures best implemented after such a p
      system. Implementing BLAKE2bp, either by patching the BLAKE2
      python module code, or by moving to C++ and appropriate library
      could remove that potential bottleneck.
-10)  Fuse read-block size: As we identified in our evaluation of file/digest
+9)  Fuse read-block size: As we identified in our evaluation of file/digest
      order, reducing the read block-size for FUSE could potentially greatly
      reduce the amount of spurious reads, but at the expense of file-system
      overhead. This should be evaluated and if worth the price, implemented
@@ -59,13 +51,13 @@ a port to C++, followed by a number of nfeatures best implemented after such a p
 
 Finaly there are some architecture priviledge seperation concerns that need adressing:
 
-11)  Redis and privilege separation: The current implementation of Mat-
+10)  Redis and privilege separation: The current implementation of Mat-
      tockFS uses REDIS as in-memory distributed storage for CarvPath
      long-path entries. The use of a Redis server for distributed CarvPath
      long-path storage is currently an Achilles’ heel in the access control
      model of MattockFS. It may be necessary to rethink this part of Mat-
      tockFS to remove this potential vulnerability.
-12   Mandatory access control: Without limiting access to /proc in an ef-
+11   Mandatory access control: Without limiting access to /proc in an ef-
      fective way, the sparse capability based API might be compromised
      through capabilities that could be snooped from other processes through
      pseudo files in the /proc hierarchy that give access to process internals
